--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react-native-gesture-handler": "1.3.0",
     "react-native-reanimated": "1.2.0",
     "react-native-svg": "9.9.2",
+    "axios": "0.19.0",
     "react-dom": "16.3.0",
+    "react-navigation": "4.0.10",
     "react-native-paper": "2.16.0",
+    "react-navigation-stack": "1.9.4",
     "styled-components": "4.4.0"
   }
 }
